<resources>
    <string name="app_name">디캐시</string>

    <!-- 공통 -->
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="str_confirm2">확인했어요.</string>
    <string name="send">전송</string>
    <string name="set_use">사용하기</string>
    <string name="retry">재시도</string>
    <string name="finish">종료</string>
    <string name="str_go">이동하기</string>
    <string name="main_back_pressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>

    <!-- 공통(에러) -->
    <string name="str_load_error_title">정보를 가져오지 못했습니다.</string>
    <string name="str_load_home_data_error">정보를 가져오는데 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="str_load_state_error">리스트를 가져오는데 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="str_no_result">결과가 없습니다.</string>
    <string name="str_expire_token_title">다시 로그인 필요</string>
    <string name="str_expire_token_contents">로그인 정보가 만료되었습니다.\n버튼을 눌러 다시 로그인 해주세요.</string>

    <!-- 인트로 -->
    <string name="intro_text">by. dmonster</string>

    <!-- 권한 -->
    <string name="set_permission_title">권한 설정</string>
    <string name="set_permission_contents">%s을 이용하기 위해서는 권한 설정이 필요합니다.</string>
    <string name="require_permission_contents">권한 설정이 완료되지 않아 %s을 이용할 수 없습니다.\n직접설정 버튼을 통해 권한을 직접 설정 할 수 있습니다.</string>
    <string name="require_permission_button">직접설정</string>

    <!-- 네트워크 -->
    <string name="retry_disabled_network">연결이 원활하지 않습니다.\n네트워크 연결 상태를 확인하거나\n다시 시도해 주세요.</string>
    <string name="use_mobile_data">모바일데이터 차단 상태입니다.\n차단을 해제하거나\nWi-Fi를 설정해 주세요.</string>
    <string name="disabled_network">네트워크 연결이 필요합니다. 확인해 주세요.</string>
    <string name="block_off">차단해제</string>

    <!-- 로그인화면 -->
    <string name="error_login_id_empty">아이디를 입력해 주세요.</string>
    <string name="error_login_pw_empty">비밀번호를 입력해 주세요.</string>
    <string name="str_login">로그인</string>
    <string name="str_join">회원가입</string>
    <string name="str_find_account_info">아이디를 잊으셨나요?</string>
    <string name="str_find_account"><u>계정찾기</u></string>
    <string name="str_sns_login_info">SNS 간편로그인</string>

    <!-- 잠금화면 설정 다이얼로그 -->
    <string name="not_showing_week">일주일간 보지 않기</string>
    <string name="not_showing_next">다시 보지 않기</string>
    <string name="set_lock_screen">잠금화면 설정</string>
    <string name="set_lock_screen_contents">%s을 잠금화면으로 설정하시면 관심사에 대한 최신 뉴스와 아직 포인트를 적립 하지 않은 뉴스에 대해 실시간으로 정보를 받아볼 수 있습니다.\n\n잠금화면으로 사용하시겠습니까?</string>
    <string name="set_lock_screen_title">잠금화면 사용을 위해 \'다른 앱 위에 표시\' 권한이 필요합니다.</string>
    <string name="set_lock_screen_subject">안드로이드 10(Q) 버전 이후부터는 \'다른 앱 위에 표시\' 권한을 설정해야만 잠금화면을 이용할 수 있습니다.\n\n\'%s\'잠금화면 설정을 위해서 권한을 설정해 주세요.</string>
    <string name="set_lock_screen_button">권한 설정하기</string>

    <!-- 잠금화면 Notification -->
    <string name="lock_screen_notification_content_title">%s 잠금화면</string>
    <string name="lock_screen_notification_content_text">%s에서 잠금화면을 사용하고 있습니다.</string>

    <!-- 잠금화면 -->
    <string name="str_unlock">잠금해제</string>
    <string name="str_launch_app">앱실행</string>

    <!-- 뉴스상세 -->
    <string name="str_not_load_news_title">뉴스를 불러오지 못했습니다.</string>
    <string name="str_not_load_news">삭제되거나 다른 요인으로 뉴스를 불러 올 수 없습니다.</string>
    <string name="use_external_browser">외부 브라우저 사용</string>
    <string name="go_external_browser">해당 링크로 이동하려면 외부 브라우저를 이용해야 합니다.\n링크로 이동하시겠습니까?</string>
    <string name="str_news">뉴스</string>
    <string name="str_scroll_top">위로 이동</string>
    <string name="str_recommend_news">추천 뉴스</string>
    <string name="str_custom_news">맞춤 뉴스</string>
    <string name="str_more_recommend_news">추천뉴스 펼쳐보기</string>
    <string name="str_slash">/</string>
    <string name="str_dot">ㆍ</string>
    <string name="str_point">+%dp</string>
    <string name="str_id">아이디</string>
    <string name="str_pw">비밀번호</string>
    <string name="str_all_news">전체뉴스 보기</string>
    <string name="str_populer">인기</string>
    <string name="str_all">전체</string>
    <string name="str_category_news">분야별뉴스</string>
    <string name="str_reset">재설정</string>
    <string name="str_news_view_tutorial_title">뉴스를보면 %dp 적립!</string>
    <string name="str_get_point_title">%dp 적립했어요!</string>
    <string name="str_get_point_contents">현재 포인트 : %dp</string>
    <string name="str_news_view_tutorial_contents1">한번 포인트를 적립한 뉴스는 다시 적립이 불가능하며</string>
    <string name="str_news_view_tutorial_contents2">아이콘이 있으면 적립이 가능합니다.</string>
    <string name="str_news_view_tutorial_contents3">뉴스를 80%이상, 10초 이상 봐야지 포인트가 적립이 됩니다.</string>
    <string name="str_input_search_text">검색어를 입력해 주세요.</string>
    <string name="str_popular_search_text">인기 검색어</string>
    <string name="str_recent_search_text">최근 검색어</string>
    <string name="str_search">검색하기</string>
    <string name="str_numbering">%d.</string>
    <string name="str_action_share">공유하기</string>

    <!-- 포인트 -->
    <string name="str_current_point_title">나의 현재 포인트는</string>
    <string name="str_p">P</string>
    <string name="str_use_point_title">포인트 사용하기</string>
    <string name="str_use_point_not_yet">포인트 사용하기는 현재 준비중인 컨텐츠 입니다.</string>
    <string name="str_free_point">무료 포인트</string>
    <string name="str_all_history">전체내역 보기</string>
    <string name="str_recent_point_history">최근 포인트 내역(20건)</string>
</resources>