<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="point"
            type="Integer" />

        <variable
            name="totalPoint"
            type="Integer" />

        <variable
            name="viewModel"
            type="com.dmonster.dcash.view.dialog.getPoint.GetPointViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_sheet"
        android:paddingHorizontal="14dp"
        android:paddingBottom="10dp"
        app:behavior_draggable="true"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{@string/str_get_point_title(point)}"
            android:textColor="@color/text_color_check"
            android:textSize="22sp"
            app:fontFamily="@font/pretendard_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="@string/str_get_point_title" />

        <TextView
            android:id="@+id/contentsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{@string/str_get_point_contents(totalPoint)}"
            android:textColor="@color/default_grey"
            android:textSize="15sp"
            app:fontFamily="@font/pretendard_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTv"
            tools:text="@string/str_get_point_contents" />

        <com.google.android.material.button.MaterialButton
            style="@style/CustomMaterialButtonMain"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/str_confirm2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentsTv"
            app:onSingleClick="@{() -> viewModel.onClick()}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>