<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dmonster.dcash.view.point.PointViewModel" />

        <variable
            name="isResult"
            type="Boolean" />

        <variable
            name="refreshListener"
            type="androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:setOnRefreshListener="@{refreshListener}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:background="@color/main_color_alpha08"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_current_point_title"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@{&quot;+ &quot; + viewModel.userPoint}"
                    android:textColor="@color/main_color"
                    android:textSize="36sp"
                    app:fontFamily="@font/pretendard_semi_bold"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="0" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/str_p"
                    android:textColor="@color/main_color"
                    android:textSize="24sp"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView5" />

                <com.google.android.material.button.MaterialButton
                    style="@style/CustomMaterialButtonSub"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/set_use"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:fontFamily="@font/pretendard_semi_bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    app:onSingleClick="@{() -> viewModel.onUsePointClick()}" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="145dp"
                android:background="@drawable/fill_white_border_1dp_lingrey_round_4"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/str_free_point"
                    android:textColor="@color/default_grey"
                    app:fontFamily="@font/pretendard_regular" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:background="@color/line_grey" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/str_all_history"
                    android:textColor="@color/default_grey"
                    app:fontFamily="@font/pretendard_regular" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/listTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_recent_point_history"
                    android:textColor="@color/main_color"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/noResult"
                    layout="@layout/no_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="@{isResult ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@+id/listTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="@{isResult ? View.VISIBLE : View.GONE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:paddingBottom="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listTitle"
                    tools:listitem="@layout/item_point_history" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/rv"
                    app:layout_constraintEnd_toEndOf="@+id/rv"
                    app:layout_constraintStart_toStartOf="@+id/rv"
                    app:layout_constraintTop_toTopOf="@+id/rv"
                    app:shimmer_auto_start="true"
                    tools:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />

                        <include layout="@layout/item_point_history_shimmer" />
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>